[package]
name = "packet-json"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
env_logger = "0.11.5"
pgp = "0.14.0"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.132"
testresult = "0.4.1"

[dev-dependencies]
rstest = "0.23.0"
